--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ dependencies:
   flutter_local_notifications: ^19.4.2
   timeago: ^3.7.1
   badges: ^3.1.2
+  metaballs: ^1.5.0
 
 dependency_overrides:
   http: ^1.4.0
