--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,8 @@ dependencies:
   timeago: ^3.7.1
   badges: ^3.1.2
   metaballs: ^1.5.0
+  google_fonts: ^6.3.2
+  icons_plus: ^5.0.0
 
 dependency_overrides:
   http: ^1.4.0
