--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   metaballs: ^1.5.0
   google_fonts: ^6.3.2
   icons_plus: ^5.0.0
+  flutter_spinkit: ^5.2.2
 
 dependency_overrides:
   http: ^1.4.0
