--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -11,23 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.35.3'
+          flutter-version: '3.35.3'  # your Flutter version
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze code
-        run: flutter analyze
+      # Step 4: Build APK
+      - name: Build Android APK
+        run: flutter build apk --release
 
-      - name: Run tests
-        run: flutter test
-
-      # Optional for web build
+        # Step 5: Build Web
+        # (optional - keep it if you also want web)
       - name: Build Web
         run: flutter build web
+
+      # Step 6: Upload build artifacts
+      - name: Upload APK and Web builds
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/web
