--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   google_fonts: ^6.3.2
   icons_plus: ^5.0.0
   flutter_spinkit: ^5.2.2
+  flip_card_swiper: ^1.0.0
 
 dependency_overrides:
   http: ^1.4.0
