--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -145,6 +145,8 @@ flutter:
     - assets/images/paybill/
     - assets/images/otherBank/
     - assets/images/movies/
+    - assets/images/paybill/mobile_recharge/
+    - assets/images/paybill/electric_city/
     - assets/temps/
     - assets/icons/
     - assets/icons/setting_icons/
