--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
         android:label="payfussion"
         android:name="${applicationName}"
